# adv_data_processing_pipeline

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  mypy.ini  readme.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  python-publish.yml
adv_data_processing/: MANIFEST.in  batch_processing.py  cleaning.py  config.py  data_preprocessing.py  data_transformation.py  data_validation.py  dimensionality_reduction.py  entity_recognition.py  error_handling.py  feature_engineering.py  feature_selection.py  imbalanced_data.py  loading.py  main.py  metrics.py  model_evaluation.py  monitoring.py  optimization.py  pipeline.py  setup.py  text_analytics.py  topic_modeling.py  transformation.py  utils.py  validation.py  visualization.py
adv_data_processing/.github/workflows/: test.yml
adv_data_processing/tests/: smoke_test.py  test_batch_processing.py  test_cleaning.py  test_config.py  test_data_preprocessing.py  test_data_transformation.py  test_dimensionality_reduction.py  test_feature_engineering.py  test_feature_selection.py  test_imbalanced_data.py  test_loading.py  test_main.py  test_metrics.py  test_model_evaluation.py  test_optimization.py  test_pipeline.py  test_validation.py  validate_package.py
