
[metadata]
name = advanced-data-processing
version = 0.2.1
description = An advanced data processing pipeline for machine learning workflows
long_description = file: README.md
long_description_content_type = text/markdown
author = Vanessa Beck
author_email = your.email@example.com
url = https://github.com/stochastic-sisyphus/adv_data_processing_pipeline
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pandas>=1.3.0
    dask[complete]>=2022.1.0
    scikit-learn>=1.0.0
    numpy>=1.20.0
    tqdm>=4.62.0
    PyYAML>=5.4.1

[options.extras_require]
all =
    mlflow>=1.20.0
    optuna>=2.10.0
    shap>=0.40.0
    lime>=0.2.0
    fastapi>=0.68.0
    docker>=5.0.0
    great-expectations>=0.13.0
    kedro>=0.17.0
nlp =
    nltk>=3.6.0
    spacy>=3.1.0
    gensim>=4.1.0
viz =
    matplotlib>=3.4.0
    seaborn>=0.11.0
    plotly>=5.1.0
ml =
    scikit-learn>=1.0.0
    imbalanced-learn>=0.8.0
    xgboost>=1.5.0
    lightgbm>=3.3.0

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist
ignore = D100,D104,E203,W503

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = --verbose --cov=adv_data_processing --cov-report=term-missing

[isort]
profile = black
multi_line_output = 3